[gd_scene load_steps=2 format=3 uid="uid://vw6klokpox8u"]

[ext_resource type="Script" path="res://autoload/debug_overlay.gd" id="1_ds6qe"]

[node name="debug_overlay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ds6qe")

[node name="CurrentState" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CurrentState"]
layout_mode = 2
text = "Current State: "

[node name="State" type="Label" parent="CurrentState"]
layout_mode = 2

[node name="PlayerVelocity" type="Label" parent="."]
layout_mode = 2

[node name="CurrentLevel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Artifacts" type="Label" parent="."]
layout_mode = 2
